# object_tracker

./: CMakeLists.txt  README.md  manifest.xml  package.xml  setup.py  stack.xml
cfg/: ObjectTracker.cfg  RotatingObjectTracker.cfg
conf/: rotation.estimator
include/: ObjectTracker.hpp  PclSegmentTracker.hpp  PointCloudUtils.hpp  TrackedObject.hpp
launch/: track.launch  track.rotation.launch
msg/: RotatingObjects.msg  RotationParameters.msg
python/: CMakeLists.txt  RotatingObjectTrackerConfig.py  estimate_rotation_server.py  multi_object_tracker.py  test_rotation_estimation.py
python/object_tracker/: RotatingObjectTrackerConfig.py  __init__.py  base_tracker.py  estimate_rotation_server.py  multi_object_tracker.py  rotation_tracker.py  tracked_object.py  tracker_factory.py
src/: CMakeLists.txt  ObjectTracker.cpp
srv/: EstimateRotation.srv
