<package>
  <name>object_tracker</name>
  <version>0.0.1</version>
  <description>An object tracking package</description>
  <author email="tcavallari@willowgarage.com">Tommaso Cavallari</author>
  <maintainer email="tcavallari@willowgarage.com">Tommaso Cavallari</maintainer>
  <license>BSD</license>
  <url></url>

  <build_depend>catkin</build_depend>
  <build_depend>object_recognition_core</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>catkin</run_depend>
  <run_depend>object_recognition_core</run_depend>
  <run_depend>object_recognition_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
</package>
