
# in main cmakelists
#find_package(catkin REQUIRED COMPONENTS roscpp object_recognition_core object_recognition_msgs pcl pcl_ros)
#include_directories(${catkin_INCLUDE_DIRS}
#)

#add_executable(${PROJECT_NAME}_node ObjectTracker.cpp)
#target_link_libraries(${PROJECT_NAME}_node 
#                                          ${catkin_LIBRARIES}
#                                          ${OPENCV_LIBRARIES}
#                                          ${BOOST_LIBRARIES}
#)

